--- a/GlsunView/Views/Shared/_CardInfo.cshtml
+++ b/GlsunView/Views/Shared/_CardInfo.cshtml
@@ -131,7 +131,7 @@
                 }
                 divAlert.text(data.Data);
                 divAlert.show();
-                setInterval(function () {
+                setTimeout(function () {
                     divAlert.fadeOut();
                 }, 1500);
             }
@@ -157,7 +157,7 @@
                         }
                         divAlert.text(data.Data);
                         divAlert.show();
-                        setInterval(function () {
+                        setTimeout(function () {
                             divAlert.fadeOut();
                         }, 1500);
                     }
