--- a/GlsunView/Content/css/layout.css
+++ b/GlsunView/Content/css/layout.css
@@ -53,3 +53,35 @@ html,body{
     left: 0px;
     right: 0px;
 }
+/*Ðü¸¡°´Å¥*/
+.menu_trigger{
+    height: 50px;
+    width: 0;
+    border-left: 8px solid #445577;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    opacity: 0.5;
+
+    position: absolute;
+    left: 0px;
+    top: 40%;
+}
+.menu_trigger:hover{
+    opacity: 1;
+}
+
+.status_trigger{
+    width: 50px;
+    height: 0;
+    border-bottom: 8px solid #445577;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    opacity: 0.5;
+
+    position: absolute;
+    left:45%;
+    bottom: 0;
+}
+.status_trigger:hover{
+    opacity: 1;
+}
