--- a/GlsunView/Views/EDFACard/Index.cshtml
+++ b/GlsunView/Views/EDFACard/Index.cshtml
@@ -174,7 +174,7 @@
                     </tr>
                     <tr id="hardware_Version">
                         <td class="name">硬件版本</td>
-                        <td class="value">@Model.hardware_Version </td>
+                        <td class="value">@Model.Hardware_Version </td>
                     </tr>
                     <tr id="Serial_Number">
                         <td class="name">生产序列号</td>
@@ -214,7 +214,7 @@
                             <td class="name">增益设置</td>
                             <td class="value">
                                 <div class="input-group">
-                                    <input type="text" class="form-control input-sm" name="Gain" value="@Model.Set_Gain">
+                                    <input type="text" class="form-control input-sm" name="Gain" value="@Model.Gain_Setting">
                                     <div class="input-group-addon">dBm</div>
                                 </div>
                             </td>
