--- a/GlsunView/Views/MachineFrame/Index.cshtml
+++ b/GlsunView/Views/MachineFrame/Index.cshtml
@@ -162,7 +162,7 @@
                             parent.addNavigatorData({
                                 level: 3,
                                 name: moduleType.toUpperCase(),
-                                url: "/EDFACard/Details?ip=" + deviceObject.IP + "&port=" + deviceObject.Port + "&slot=" + res[0]
+                                url: "/" + moduleType.toUpperCase() + "Card/Details?ip=" + deviceObject.IP + "&port=" + deviceObject.Port + "&slot=" + res[0]
                             });
                         }
                     }
