--- a/GlsunView/Views/OLPCard/Index.cshtml
+++ b/GlsunView/Views/OLPCard/Index.cshtml
@@ -162,7 +162,7 @@
                     </tr>
                     <tr id="hardware_Version">
                         <td class="name">硬件版本号</td>
-                        <td class="value">@Model.hardware_Version</td>
+                        <td class="value">@Model.Hardware_Version</td>
                     </tr>
                     <tr id="Serial_Number">
                         <td class="name">生产序列号</td>
